# Portfolio

bo/: BO.py  GP.py  README.md  acquisition_functions.py  bo_app.py  bo_notebook.ipynb  gp_app.py  gp_app2d.py  kernels.py  pyproject.toml  utils.py
kalman_filter/: README.md  inference.ipynb  kalman_filter.py  pyproject.toml
ksb/: .gitignore  CLAUDE.md  README.md  grid_search_beta_gamma.py  pyproject.toml  ruckig_offline.py  ruckig_test.py  ruckig_time_opt_test.py  run_debug.py  run_optimize.py  run_registrar_debug.py  run_sim.py  run_viewer.py  run_viewer_best.py
ksb/.claude/: settings.local.json
ksb/.virtual_documents/notebooks/: plot_inputs_vs_position.ipynb  plot_margin_cdf.ipynb  plot_phase_folded_margin.ipynb  plot_phi.ipynb  plot_segment_events.ipynb  plot_upstream_control.ipynb
ksb/analysis_notes/: subsection_precision.md  subsection_precision_and_drift.md  subsection_velocity_drift_fix.md
ksb/configs/: default.yaml
ksb/configs/optimizer/: default.yaml  quick.yaml
ksb/configs/system/: compute_phi.yaml  default.yaml
ksb/docs/: Buffer formalization.md  Buffer minimum-time cost.md  KSB System — Formalization.md  KSB system — Design Narrative.md  Optimization notes.md  Per-Segment Synchronization Slack.md  Registrar formalization.md  System Formalization.md  System formalization.md  Upstream formalization.md  scratchpad.md  tasks.md
ksb/ksb/: __init__.py
ksb/ksb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ksb/ksb/analysis/: __init__.py  cost.py  events.py  sync_response.py
ksb/ksb/control/: conditioning_control.py  control_profile.py  registrar.py  upstream_control.py
ksb/ksb/motion/: item_pair.py  trajectories.py
ksb/ksb/optimization/: cma_solver.py  loss.py
ksb/ksb/planning/: contracts.py  ramp.py
ksb/ksb/simulation/: ksb_simulation.py  registrar.py  result.py  utils.py
ksb/notebooks/: feasibility_geometry.ipynb  plot_cost_matrix.ipynb  plot_inputs.ipynb  plot_inputs_vs_position.ipynb  plot_margin_cdf.ipynb  plot_pair_deltas.ipynb  plot_phase_folded_margin.ipynb  plot_phi.ipynb  plot_segment_events.ipynb  plot_upstream_control.ipynb  track_a_results.ipynb
ksb/tests/: test_loss.py  test_segment_geometry_regression.py
(+12 files in other folders)
