[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bo"
version = "0.1.0"
description = "Gaussian process regression and Bayesian optimization built from scratch on NumPy/SciPy — kernels, marginal-likelihood hyperparameter fitting, and acquisition functions"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
]

[tool.setuptools]
py-modules = ["GP", "BO", "kernels", "acquisition_functions", "utils"]
