[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kalman-filter"
version = "0.1.0"
description = "Kalman filter forward pass and dynamics-only extrapolation, implemented from scratch on NumPy (Bishop 13.75-13.92)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "matplotlib>=3.7",
]

[tool.setuptools]
py-modules = ["kalman_filter"]
