[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ksb"
version = "0.1.0"
description = "Kinematic Synchronization Buffer — jerk-limited trajectory planning for stochastic arrival synchronization"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "ruckig>=0.9",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
viewer = [
    "pygame>=2.0",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ksb*"]
